--- a/mainApp/templates/home.html
+++ b/mainApp/templates/home.html
@@ -19,10 +19,10 @@
                         <div class="row">
                             <div class="col-lg-12 display-4">
                                 <input class="form-control" type="text" id="qr" value="CHLON0.5%-|ICLG19050|2|INF|BG|">
-                                <!-- <input type="hidden" id="code">
-                                <input type="hidden" id="batchno"> -->
-                                <input class="form-control" type="text" id="code">
-                                <input class="form-control" type="text" id="batchno">
+                                <input type="hidden" id="code">
+                                <input type="hidden" id="batchno">
+                                <!-- <input class="form-control" type="text" id="code">
+                                <input class="form-control" type="text" id="batchno"> -->
                             </div>
                         </div>
                     </div>
@@ -30,7 +30,7 @@
             </div>
             <div class="col-md-4">
                 <div class="form-group">
-                    <button class="btn btn-block btn-success p-5" id="submitBoxno">CHOOSE BOX</button>
+                    <button class="btn btn-block btn-success p-5" id="submitBoxno">PILIH BOX</button>
                 </div>
             </div>
         </div>
@@ -43,7 +43,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-lg-12 strong text-right display-1">
-                                <strong><span id="weight">15.901</span> KG</strong>
+                                <strong><span id="weight">-</span> KG</strong>
                             </div>
                         </div>
                     </div>
@@ -66,10 +66,10 @@
             <div class="col-md-6">
                 <div class="row">
                     <div class="col-md-6">
-                        <button class="btn btn-block btn-success form-control">CHOOSE HEADER</button>
+                        <button class="btn btn-block btn-success form-control">PILIH HEADER</button>
                     </div>
                     <div class="col-md-6">
-                        <button class="btn btn-block btn-success form-control">PRINT BATCH</button>
+                        <button class="btn btn-block btn-success form-control">CETAK BATCH</button>
                     </div>
                 </div>
             </div>
@@ -82,104 +82,6 @@
             </div>
             <div class="card-body" style="overflow-y: scroll; height:500px;">
                 <ul class="products-list product-list-in-card pl-2 pr-2" id="batchhistorylist">
-                    <li class="item">
-                        <div class="product-img">
-                            <button class="btn btn-danger">
-                                <i class="fas fa-times"></i>
-                            </button>
-                        </div>
-                        <div class="product-info">
-                            <a href="javascript:void(0)" class="product-title">Paracetamol
-                                <span class="display-4 float-right">15.002 KG </span></a>
-                            <span class="product-description">
-                                BATCH NO. ABC123 BOX NO. 12
-                            </span>
-                        </div>
-                    </li>
-                    <li class="item">
-                        <div class="product-img">
-                            <button class="btn btn-danger">
-                                <i class="fas fa-times"></i>
-                            </button>
-                        </div>
-                        <div class="product-info">
-                            <a href="javascript:void(0)" class="product-title">Paracetamol
-                                <span class="display-4 float-right">15.002 KG </span></a>
-                            <span class="product-description">
-                                BATCH NO. ABC123 BOX NO. 12
-                            </span>
-                        </div>
-                    </li>
-                    <li class="item">
-                        <div class="product-img">
-                            <button class="btn btn-danger">
-                                <i class="fas fa-times"></i>
-                            </button>
-                        </div>
-                        <div class="product-info">
-                            <a href="javascript:void(0)" class="product-title">Paracetamol
-                                <span class="display-4 float-right">15.002 KG </span></a>
-                            <span class="product-description">
-                                BATCH NO. ABC123 BOX NO. 12
-                            </span>
-                        </div>
-                    </li>
-                    <li class="item">
-                        <div class="product-img">
-                            <button class="btn btn-danger">
-                                <i class="fas fa-times"></i>
-                            </button>
-                        </div>
-                        <div class="product-info">
-                            <a href="javascript:void(0)" class="product-title">Paracetamol
-                                <span class="display-4 float-right">15.002 KG </span></a>
-                            <span class="product-description">
-                                BATCH NO. ABC123 BOX NO. 12
-                            </span>
-                        </div>
-                    </li>
-                    <li class="item">
-                        <div class="product-img">
-                            <button class="btn btn-danger">
-                                <i class="fas fa-times"></i>
-                            </button>
-                        </div>
-                        <div class="product-info">
-                            <a href="javascript:void(0)" class="product-title">Paracetamol
-                                <span class="display-4 float-right">15.002 KG </span></a>
-                            <span class="product-description">
-                                BATCH NO. ABC123 BOX NO. 12
-                            </span>
-                        </div>
-                    </li>
-                    <li class="item">
-                        <div class="product-img">
-                            <button class="btn btn-danger">
-                                <i class="fas fa-times"></i>
-                            </button>
-                        </div>
-                        <div class="product-info">
-                            <a href="javascript:void(0)" class="product-title">Paracetamol
-                                <span class="display-4 float-right">15.002 KG </span></a>
-                            <span class="product-description">
-                                BATCH NO. ABC123 BOX NO. 12
-                            </span>
-                        </div>
-                    </li>
-                    <li class="item">
-                        <div class="product-img">
-                            <button class="btn btn-danger">
-                                <i class="fas fa-times"></i>
-                            </button>
-                        </div>
-                        <div class="product-info">
-                            <a href="javascript:void(0)" class="product-title">Paracetamol
-                                <span class="display-4 float-right">15.002 KG </span></a>
-                            <span class="product-description">
-                                BATCH NO. ABC123 BOX NO. 12
-                            </span>
-                        </div>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -201,16 +103,23 @@
             $("#batchno").val(batchno)
         }
         // alert(code+" "+batchno+" "+boxno)
+        var data = {
+            code:code,
+            batchno:batchno,
+            boxno:boxno,
+            status:"0"
+        }
         $.ajax({
             type: "POST",
             dataType: "json",
             url: url,
-            data: JSON.stringify({ code: code, batchno: batchno, boxno: boxno, status:0 }),
+            data: data,
             success: function (data) {   // success callback function
+                updateBoxList()
                 console.log(data)
             },
             error: function (jqXhr, textStatus, errorMessage) { // error callback 
-                console.log('Error: ' + jqXhr.responseJSON.error)
+                alert(jqXhr.responseJSON.message)
             }
         })
     })
@@ -218,7 +127,8 @@
     function updateBoxList() {
         var batchno = $("#batchno").val()
         var code = $("#code").val()
-        var url = "/home/register?batchno="+ batchno
+        var url = "{% url 'register' %}"+"/register?batchno="+ batchno
+        // var url = "/weighing
         if (code && batchno) {
             $.ajax({
                 type: "GET",
@@ -233,7 +143,7 @@
                         html += '\
                         <li class="item">\
                             <div class="product-img">\
-                                <button class="btn btn-danger">\
+                                <button class="btn btn-danger deleteBox" data-id="'+ record.id +'">\
                                     <i class="fas fa-times"></i>\
                                 </button>\
                             </div>\
@@ -255,5 +165,19 @@
     const interval = setInterval(function () {
         updateBoxList()
     }, 5000);
+
+    $("#batchhistorylist").on("click", ".deleteBox",function () {
+        var registerid = $(this).data('id');
+        $.ajax({
+            type: "PUT",
+            dataType: "json",
+            url: url,
+            data: JSON.stringify({"registerid": registerid}),
+            success: function (data) {   // success callback function
+                alert(data.message)
+                updateBoxList()
+            }
+        })
+    })
 </script>
 {% endblock %}
