--- a/mainApp/templates/sidebar.html
+++ b/mainApp/templates/sidebar.html
@@ -4,7 +4,7 @@
                with font-awesome or any other icon font library -->
         <li class="nav-item">
             <a href="#" class="nav-link">
-                <i class="nav-icon fas fa-database"></i>
+                <i class="nav-icon fas fa-home"></i>
                 <p>
                     Home
                     <i class="right fas fa-angle-left"></i>
@@ -12,9 +12,9 @@
             </a>
             <ul class="nav nav-treeview">
                 <li class="nav-item">
-                    <a href="{% url 'mainpage'%}" class="nav-link">
+                    <a href="{% url 'weighing'%}" class="nav-link">
                         <i class="far fa-circle nav-icon"></i>
-                        <p>Home</p>
+                        <p>Weighing</p>
                     </a>
                 </li>
             </ul>
