--- a/mainApp/templates/home.html
+++ b/mainApp/templates/home.html
@@ -132,7 +132,7 @@
     function updateBoxList() {
         var batchno = $("#batchno").val()
         var code = $("#code").val()
-        var url = "{% url 'register' %}"+"/register?batchno="+ batchno
+        var url = "{% url 'register' %}"+"/register?batchno="+ batchno +"&code="+ code
         // var url = "/weighing
         if (code && batchno) {
             $.ajax({
