--- a/mainApp/templates/sidebar.html
+++ b/mainApp/templates/sidebar.html
@@ -36,5 +36,22 @@
                 </li>
             </ul>
         </li>
+        <li class="nav-item">
+            <a href="#" class="nav-link">
+                <i class="nav-icon fas fa-database"></i>
+                <p>
+                    Report
+                    <i class="right fas fa-angle-left"></i>
+                </p>
+            </a>
+            <ul class="nav nav-treeview">
+                <li class="nav-item">
+                    <a href="{% url 'reportbatch'%}" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Batch</p>
+                    </a>
+                </li>
+            </ul>
+        </li>
     </ul>
 </nav>
