--- a/mainApp/templates/sidebar.html
+++ b/mainApp/templates/sidebar.html
@@ -34,6 +34,18 @@
                         <p>Product</p>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="{% url 'viewdepartment'%}" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Department</p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'viewreporttitle'%}" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Report Title</p>
+                    </a>
+                </li>
             </ul>
         </li>
         <li class="nav-item">
