--- a/mainApp/templates/master_product.html
+++ b/mainApp/templates/master_product.html
@@ -31,12 +31,15 @@
     <div class="card-body">
         <div class="row">
             <div class="col-lg-12">
-                <table class="table">
+                <table class="table dataTable">
+                    <thead>
                     <tr>
                         <th>Name</th>
                         <th>Code</th>
                         <th>Action</th>
                     </tr>
+                    </thead>
+                    <tbody>
                     {%for row in data%}
                     <tr>
                         <td>{{row.name}}</td>
@@ -47,6 +50,7 @@
                                     class="fas fa-trash"></i></a></td>
                     </tr>
                     {%endfor%}
+                    </tbody>
                 </table>
             </div>
         </div>
