--- a/mainApp/templates/upload_batch.html
+++ b/mainApp/templates/upload_batch.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block titlepage %}
-<h1>Report Batch</h1>
+<h1>Upload Batch</h1>
 {% endblock %}
 {% block sidebar %}
 {% include "sidebar.html" %}
@@ -13,26 +13,12 @@
             <div class="card-body">
                 <div class="row">
                     <div class="col-lg-12">
-                        <form action="{% url 'reportbatch' %}" method="POST" autocomplete="off">
+                        <form action="{% url 'viewuploadbatch' %}" method="POST" autocomplete="off" enctype="multipart/form-data">
                             {% csrf_token %}
                             {{ form | crispy }}
                             <hr>
-                            <input class="btn btn-success" type="submit" value="Cari">
+                            <input class="btn btn-success" type="submit" value="Isikan">
                         </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-lg-6">
-        <div class="card">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <button id="exportbatch" class="btn btn-primary btn-block">Export CSV</button>
-                    </div>
-                    <div class="col-lg-6">
-                        <button id="exportbatchpdf" class="btn btn-danger btn-block">Export PDF</button>
                     </div>
                 </div>
             </div>
@@ -51,6 +37,7 @@
                         <th>Box No</th>
                         <th>Weight</th>
                         <th>Input Date</th>
+                        <th>Action</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -59,8 +46,11 @@
                         <td>{{row.product_name}}</td>
                         <td>{{row.batchno}}</td>
                         <td>{{row.boxno}}</td>
-                        <td>{{row.iot_weight}}</td>
-                        <td>{{row.input_date|date:"j/n/Y"}}</td>
+                        <td>{{row.weight}}</td>
+                        <td>{{row.measuredate|date:"j/n/Y"}}</td>
+                        <td><a class="btn btn-danger" href="{% url 'deleteuploadbatch' row.id %}"
+                                onclick="return confirm('Apakah anda yakin untuk menghapus data?')"><i class="fas fa-trash"></i></a>
+                        </td>
                     </tr>
                     {%endfor%}
                     </tbody>
@@ -83,19 +73,6 @@
         var inputdatefrom = $("#id_inputdatefrom").val()
         var inputdateto = $("#id_inputdateto").val()
         window.open(url + "?productid=" + productid + "&batchno=" + batchno + "&inputdatefrom=" + inputdatefrom + "&inputdateto=" + inputdateto)
-    })
-
-    $("#exportbatchpdf").click(function () {
-        var url = "{% url 'reportbatchpdf' %}"
-        var productid = $("#id_productid").val()
-        var batchno = $("#id_batchno").val()
-        var inputdatefrom = $("#id_inputdatefrom").val()
-        var inputdateto = $("#id_inputdateto").val()
-        if (!productid || !batchno) {
-            alert("Product dan Batch No harus diisi!")
-        } else {
-            window.open(url + "?productid=" + productid + "&batchno=" + batchno + "&inputdatefrom=" + inputdatefrom + "&inputdateto=" + inputdateto)
-        }
     })
 </script>
 {% endblock %}
