--- a/mainApp/templates/report_batch.html
+++ b/mainApp/templates/report_batch.html
@@ -17,22 +17,9 @@
                             {% csrf_token %}
                             {{ form | crispy }}
                             <hr>
+                            <button id="exportbatch" class="btn btn-primary">Export CSV</button>
                             <input class="btn btn-success" type="submit" value="Cari">
                         </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-lg-6">
-        <div class="card">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <button id="exportbatch" class="btn btn-primary btn-block">Export CSV</button>
-                    </div>
-                    <div class="col-lg-6">
-                        <button id="exportbatchpdf" class="btn btn-danger btn-block">Export PDF</button>
                     </div>
                 </div>
             </div>
@@ -45,24 +32,24 @@
             <div class="col-lg-12">
                 <table class="table dataTable">
                     <thead>
-                    <tr>
-                        <th>Product</th>
-                        <th>Batch No</th>
-                        <th>Box No</th>
-                        <th>Weight</th>
-                        <th>Input Date</th>
-                    </tr>
+                        <tr>
+                            <th>Product</th>
+                            <th>Batch No</th>
+                            <th>Box No</th>
+                            <th>Weight</th>
+                            <th>Input Date</th>
+                        </tr>
                     </thead>
                     <tbody>
-                    {%for row in data%}
-                    <tr>
-                        <td>{{row.product_name}}</td>
-                        <td>{{row.batchno}}</td>
-                        <td>{{row.boxno}}</td>
-                        <td>{{row.iot_weight}}</td>
-                        <td>{{row.input_date|date:"j/n/Y"}}</td>
-                    </tr>
-                    {%endfor%}
+                        {%for row in data%}
+                        <tr>
+                            <td>{{row.product_name}}</td>
+                            <td>{{row.batchno}}</td>
+                            <td>{{row.boxno}}</td>
+                            <td>{{row.iot_weight}}</td>
+                            <td>{{row.input_date|date:"j/n/Y"}}</td>
+                        </tr>
+                        {%endfor%}
                     </tbody>
                 </table>
             </div>
