--- a/mainApp/templates/sidebar.html
+++ b/mainApp/templates/sidebar.html
@@ -68,7 +68,13 @@
                 <li class="nav-item">
                     <a href="{% url 'reportbatch'%}" class="nav-link">
                         <i class="far fa-circle nav-icon"></i>
-                        <p>Batch</p>
+                        <p>Weighted Batch</p>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'viewreportbody'%}" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Uploaded Batch</p>
                     </a>
                 </li>
             </ul>
