--- a/mainApp/templates/upload_batch.html
+++ b/mainApp/templates/upload_batch.html
@@ -17,7 +17,7 @@
                             {% csrf_token %}
                             {{ form | crispy }}
                             <hr>
-                            <input class="btn btn-success" type="submit" value="Isikan">
+                            <input class="btn btn-success" type="submit" value="Simpan">
                         </form>
                     </div>
                 </div>
