--- a/mainApp/templates/sidebar.html
+++ b/mainApp/templates/sidebar.html
@@ -68,13 +68,13 @@
                 <li class="nav-item">
                     <a href="{% url 'reportbatch'%}" class="nav-link">
                         <i class="far fa-circle nav-icon"></i>
-                        <p>Weighted Batch</p>
+                        <p>CSV</p>
                     </a>
                 </li>
                 <li class="nav-item">
                     <a href="{% url 'viewreportbody'%}" class="nav-link">
                         <i class="far fa-circle nav-icon"></i>
-                        <p>Uploaded Batch</p>
+                        <p>PDF</p>
                     </a>
                 </li>
             </ul>
