--- a/mainApp/templates/master_product.html
+++ b/mainApp/templates/master_product.html
@@ -7,55 +7,86 @@
 {% include "sidebar.html" %}
 {% endblock %}
 {% block content %}
-<div class="col-lg-6">
-    <div class="card">
-        <div class="card-body">
-            <div class="row">
-                <div class="col-lg-12">
-                    {% if action == 'view' %}
-                    <form action="{% url 'viewproduct' %}" method="POST"  autocomplete="off">
-                    {% elif action == 'edit' %}
-                    <form action="{% url 'editproduct' id %}" method="POST"  autocomplete="off">
-                    {% endif %}
-                        {% csrf_token %}
-                        {{ form | crispy }}
-                        <hr>
-                        <input class="btn btn-success" type="submit" value="Simpan">
-                    </form>
+<div class="card card-secondary card-tabs">
+    <div class="card-header p-0 pt-1">
+        <ul class="nav nav-tabs" id="custom-tabs-one-tab" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link {% if action == 'view' %} active {% endif %}" id="button-tab-1" data-toggle="pill" href="#tab-1"
+                    role="tab" aria-controls="tab-1" aria-selected="true">List</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link {% if action == 'edit' %} active {% endif %}" id="button-tab-2" data-toggle="pill" href="#tab-2"
+                    role="tab" aria-controls="tab-2" aria-selected="false">{% if action == 'view' %} New {% else %} Edit {% endif %}</a>
+            </li>
+            {% if action == 'edit' %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'viewproduct' %}#tab-2">New</a>
+            </li>
+            {% endif %}
+        </ul>
+    </div>
+    <div class="card-body">
+        <div class="tab-content" id="custom-tabs-one-tabContent">
+            <div class="tab-pane fade {% if action == 'view' %} active show {% endif %}" id="tab-1" role="tabpanel" aria-labelledby="button-tab-1">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <table class="table dataTable">
+                                    <thead>
+                                        <tr>
+                                            <th>Name</th>
+                                            <th>Code</th>
+                                            <th>Action</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {%for row in data%}
+                                        <tr>
+                                            <td>{{row.name}}</td>
+                                            <td>{{row.code}}</td>
+                                            <td><a class="btn btn-secondary" href="{% url 'editproduct' row.id %}"><i
+                                                        class="fas fa-edit"></i></a>
+                                                <a class="btn btn-danger" href="{% url 'deleteproduct' row.id %}"
+                                                    onclick="return confirm('Apakah anda yakin untuk menghapus data?')"><i
+                                                        class="fas fa-trash"></i></a>
+                                            </td>
+                                        </tr>
+                                        {%endfor%}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane fade {% if action == 'edit' %} active show {% endif %}" id="tab-2" role="tabpanel" aria-labelledby="button-tab-2">
+                <div class="col-lg-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    {% if action == 'view' %}
+                                    <form action="{% url 'viewproduct' %}" method="POST" autocomplete="off">
+                                        {% elif action == 'edit' %}
+                                        <form action="{% url 'editproduct' id %}" method="POST" autocomplete="off">
+                                            {% endif %}
+                                            {% csrf_token %}
+                                            {{ form | crispy }}
+                                            <hr>
+                                            <input class="btn btn-success" type="submit" value="Simpan">
+                                        </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<div class="card">
-    <div class="card-body">
-        <div class="row">
-            <div class="col-lg-12">
-                <table class="table dataTable">
-                    <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Code</th>
-                        <th>Action</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    {%for row in data%}
-                    <tr>
-                        <td>{{row.name}}</td>
-                        <td>{{row.code}}</td>
-                        <td><a class="btn btn-secondary" href="{% url 'editproduct' row.id %}"><i class="fas fa-edit"></i></a>
-                            <a class="btn btn-danger" href="{% url 'deleteproduct' row.id %}"
-                                onclick="return confirm('Apakah anda yakin untuk menghapus data?')"><i
-                                    class="fas fa-trash"></i></a></td>
-                    </tr>
-                    {%endfor%}
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-</div>
+
+
 {% endblock %}
 {% block additionaljs %}
 <script>
