--- a/mainApp/templates/report_body.html
+++ b/mainApp/templates/report_body.html
@@ -7,72 +7,107 @@
 {% include "sidebar.html" %}
 {% endblock %}
 {% block content %}
-<div class="row">
-    <div class="col-lg-12">
-        <div class="card">
-            <div class="card-body">
-                <form action="{% url 'viewreportbody' %}" method="POST" autocomplete="off">
-                    <div class="row">
-                        {% csrf_token %}
-                        <div class="col-lg-6">
-                            {% for field in form|slice:":4" %}
-                            {{field|as_crispy_field}}
-                            {% endfor %}
-                            <hr>
-                        </div>
-                        <div class="col-lg-6">
-                            {% for field in form|slice:"4:" %}
-                            {{field|as_crispy_field}}
-                            {% endfor %}
-                            <hr>
-                        </div>
-                        <input class="btn btn-success" type="submit" value="Simpan">
-                    </div>
-                </form>
-            </div>
-        </div>
+
+<div class="card card-secondary card-tabs">
+    <div class="card-header p-0 pt-1">
+        <ul class="nav nav-tabs" id="custom-tabs-one-tab" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link {% if action == 'view' %} active {% endif %}" id="button-tab-1" data-toggle="pill"
+                    href="#tab-1" role="tab" aria-controls="tab-1" aria-selected="true">List</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link {% if action == 'edit' %} active {% endif %}" id="button-tab-2" data-toggle="pill"
+                    href="#tab-2" role="tab" aria-controls="tab-2" aria-selected="false">{% if action == 'view' %} New
+                    {% else %} Edit {% endif %}</a>
+            </li>
+            {% if action == 'edit' %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'viewreportbody' %}#tab-2">New</a>
+            </li>
+            {% endif %}
+        </ul>
     </div>
-</div>
-<div class="card">
     <div class="card-body">
-        <div class="row">
-            <div class="col-lg-12">
-                <table class="table dataTable">
-                    <thead>
-                        <tr>
-                            <th>Product</th>
-                            <th>Batch No</th>
-                            <th>Report Title</th>
-                            <th>DN No</th>
-                            <th>DN Rev</th>
-                            <th>Created On</th>
-                            <th>Action</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {%for row in data%}
-                        <tr>
-                            <td>{{row.product}}</td>
-                            <td>{{row.batchno}}</td>
-                            <td>{{row.reporttitle}}</td>
-                            <td>{{row.dnno}}</td>
-                            <td>{{row.dnrev}}</td>
-                            <td>{{row.createdon}}</td>
-                            <td><a data-toggle="tooltip" title="Export to PDF" target="_blank" class="btn btn-primary" href="{% url 'reportbatchpdf' %}?id={{row.id}}"><i class="fas fa-file"></i></a>
-                                <a data-toggle="tooltip" title="Edit" class="btn btn-secondary" href="{% url 'editreportbody' row.id %}"><i
-                                        class="fas fa-edit"></i></a>
-                                <a data-toggle="tooltip" title="Delete" class="btn btn-danger" href="{% url 'deletereportbody' row.id %}"
-                                    onclick="return confirm('Apakah anda yakin untuk menghapus data?')"><i
-                                        class="fas fa-trash"></i></a>
-                            </td>
-                        </tr>
-                        {%endfor%}
-                    </tbody>
-                </table>
+        <div class="tab-content" id="custom-tabs-one-tabContent">
+            <div class="tab-pane fade {% if action == 'view' %} active show {% endif %}" id="tab-1" role="tabpanel"
+                aria-labelledby="button-tab-1">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <table class="table dataTable">
+                                    <thead>
+                                        <tr>
+                                            <th>Product</th>
+                                            <th>Batch No</th>
+                                            <th>Report Title</th>
+                                            <th>DN No</th>
+                                            <th>DN Rev</th>
+                                            <th>Created On</th>
+                                            <th>Action</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {%for row in data%}
+                                        <tr>
+                                            <td>{{row.product}}</td>
+                                            <td>{{row.batchno}}</td>
+                                            <td>{{row.reporttitle}}</td>
+                                            <td>{{row.dnno}}</td>
+                                            <td>{{row.dnrev}}</td>
+                                            <td>{{row.createdon}}</td>
+                                            <td><a data-toggle="tooltip" title="Export to PDF" target="_blank" class="btn btn-primary"
+                                                    href="{% url 'reportbatchpdf' %}?id={{row.id}}"><i class="fas fa-file"></i></a>
+                                                <a data-toggle="tooltip" title="Edit" class="btn btn-secondary"
+                                                    href="{% url 'editreportbody' row.id %}"><i class="fas fa-edit"></i></a>
+                                                <a data-toggle="tooltip" title="Delete" class="btn btn-danger"
+                                                    href="{% url 'deletereportbody' row.id %}"
+                                                    onclick="return confirm('Apakah anda yakin untuk menghapus data?')"><i
+                                                        class="fas fa-trash"></i></a>
+                                            </td>
+                                        </tr>
+                                        {%endfor%}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-pane fade {% if action == 'edit' %} active show {% endif %}" id="tab-2" role="tabpanel"
+                aria-labelledby="button-tab-2">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <form action="{% url 'viewreportbody' %}" method="POST" autocomplete="off">
+                                    <div class="row">
+                                        {% csrf_token %}
+                                        <div class="col-lg-6">
+                                            {% for field in form|slice:":4" %}
+                                            {{field|as_crispy_field}}
+                                            {% endfor %}
+                                            <hr>
+                                        </div>
+                                        <div class="col-lg-6">
+                                            {% for field in form|slice:"4:" %}
+                                            {{field|as_crispy_field}}
+                                            {% endfor %}
+                                            <hr>
+                                        </div>
+                                        <input class="btn btn-success" type="submit" value="Simpan">
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
+
+
 {% endblock %}
 {% block additionaljs %}
 <script>
