--- a/mainApp/templates/home.html
+++ b/mainApp/templates/home.html
@@ -43,7 +43,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-lg-12 strong text-right display-1">
-                                <strong><span id="weight">-</span> KG</strong>
+                                <strong><span id="weight">-</span> gr</strong>
                             </div>
                         </div>
                     </div>
