--- a/mainApp/templates/home.html
+++ b/mainApp/templates/home.html
@@ -43,7 +43,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-lg-12 strong text-right display-1">
-                                <strong><span id="weight">-</span> gr</strong>
+                                <strong><span id="weight">-</span> g</strong>
                             </div>
                         </div>
                     </div>
@@ -154,7 +154,7 @@
                             </div>\
                             <div class="product-info">\
                                 <a href="javascript:void(0)" class="product-title">'+ record.product_name +'\
-                                    <span class="display-4 float-right">'+ weight+' KG </span></a>\
+                                    <span class="display-4 float-right">'+ weight+' g </span></a>\
                                 <span class="product-description">\
                                     BATCH NO. '+record.batchno+' BOX NO. '+record.boxno+'\
                                 </span>\
