--- a/secureapp/templates/registration/login.html
+++ b/secureapp/templates/registration/login.html
@@ -21,6 +21,7 @@
   <!-- /.login-logo -->
   <div class="card card-outline card-primary">
     <div class="card-header text-center">
+      <img class="img-fluid" src="{% static 'others/logo.png' %}">
       <a href="{% static 'adminlte/index2.html' %}" class="h3">SCALE APP</a>
     </div>
     <div class="card-body">
