--- a/mainApp/templates/sidebar.html
+++ b/mainApp/templates/sidebar.html
@@ -55,6 +55,14 @@
                     </a>
                 </li>
             </ul>
+            <ul class="nav nav-treeview">
+                <li class="nav-item">
+                    <a href="{% url 'weighingstate'%}" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Weighing State</p>
+                    </a>
+                </li>
+            </ul>
         </li>
         <li class="nav-item">
             <a href="#" class="nav-link">
